package nl.vaneijndhoven.dukes.generallee;

public class GeneralLee {



}
