@startuml

    namespace nl.vaneijndhoven.dukes.generallee {

        class SteeringMap [[SteeringMap.html]] {
            {static} +WHEEL_CENTER: int
            {static} +WHEEL_STEP_SIZE: int
            {static} +WHEEL_MAX_LEFT: int
            {static} +WHEEL_MAX_RIGHT: int
            +center(): int
            +stepSize(): int
            +maxLeft(): int
            +maxRight(): int
        }

        class EngineMap [[EngineMap.html]] {
            {static} +SPEED_ZERO: int
            {static} +SPEED_STEP_SIZE: int
            {static} +MIN_SPEED_REVERSE: int
            {static} +MIN_SPEED_FORWARD: int
            {static} +MAX_SPEED_REVERSE: int
            {static} +MAX_SPEED_FORWARD: int
            +neutral(): int
            +stepSize(): int
            +minReverse(): int
            +maxReverse(): int
            +minForward(): int
            +maxForward(): int
        }

        class GeneralLee [[GeneralLee.html]] {
        }

        interface nl.vaneijndhoven.dukes.car.SteeringMap {
            {abstract} +center(): int
            {abstract} +stepSize(): int
            {abstract} +maxLeft(): int
            {abstract} +maxRight(): int
        }
        nl.vaneijndhoven.dukes.car.SteeringMap <|.. SteeringMap

        interface nl.vaneijndhoven.dukes.car.EngineMap {
            {abstract} +neutral(): int
            {abstract} +stepSize(): int
            {abstract} +minReverse(): int
            {abstract} +maxReverse(): int
            {abstract} +minForward(): int
            {abstract} +maxForward(): int
        }
        nl.vaneijndhoven.dukes.car.EngineMap <|.. EngineMap

    }


    center footer UMLDoclet 1.1.4, PlantUML 1.2019.05
@enduml
